fix perf stat alignment

--- a/ui/perfStat/css/_perf-stat.scss
+++ b/ui/perfStat/css/_perf-stat.scss
@@ -45,7 +45,7 @@
     margin-top: 4em;
   }
   .split {
-    @extend %flex-center;
+    display: flex;
     > div {
       flex: 0 0 49%;
       &:first-child {
